<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_rename"
        app:showAsAction="always" />

    <item android:id="@+id/menu_meddwak"
        android:icon="@drawable/ic_med"
        app:showAsAction="always"
        android:title="@string/menu_ocr" />

    <item android:id="@+id/menu_paging"
        android:icon="@drawable/ic_med"
        app:showAsAction="always"
        android:title="List" />

    <item android:id="@+id/menu_chat"
        android:icon="@drawable/ic_med"
        app:showAsAction="always"
        android:title="Chat" />

    <item android:id="@+id/menu_contact"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"
        android:title="@string/menu_delete" />

    <item android:id="@+id/menu_shar"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"
        android:title="Partager l'application" />


</menu>